--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,8 @@
 __pycache__/
 .env
 audios-from-videos/*
+!audios-from-videos/VideoTest.mp3
 text-from-videos/*
+!text-from-videos/VideoTest.txt
 videos-to-summary/*
+!videos-to-summary/Video Test.mp4
